# InsureTech

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 00a1f2f39787_make_datetime_timezone_aware.py  992798e04fa5_create_all_auth_table.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/modules/auth/: Password_hash.py  jwt_helper.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/tests/: test_health.py
frontend/: .eslintrc.cjs  index.html  package.json
frontend/src/: App.tsx
